--- a/src/components/SideBar/sideBar.css
+++ b/src/components/SideBar/sideBar.css
@@ -1,3 +1,5 @@
+
+
 .sideBar {
     display: flex;
     flex-direction: column;
@@ -5,6 +7,13 @@
     height: 100%;
     border-right: #342F2E 1px solid;
     position: relative;
+    transform : translateX(0);
+    transition: transform 0.3s ease-out;
+}
+
+.sideBar.closed {
+    transform: translateX(-100%);
+    transition: transform 0.3s ease-out;
 }
 
 .sideBar .logo {
@@ -13,7 +22,7 @@
 }
 
 .sideBar .logo img {
-    width: 150px;
+    width: 120px;
 }
 
 .settings {
@@ -39,8 +48,6 @@
     margin-right: 10px;
     margin-left: 10px;
     font-size: 12px;
-
-
 }
 
 .sideBar .settings:hover{
@@ -65,6 +72,7 @@
     border: #342F2E 1px solid;
     z-index: 3;
     margin-left: -104px;
+    background: #171311;
 }
 
 .sideBar .modal-settings.animate__animated {
@@ -105,10 +113,16 @@
     transition: ease all 0.3s;
     background: #342f2e;
 }
+
 .sideBar .modal-settings .settings-line a {
     font-weight: 300;
     font-size: 15px;
     text-decoration: none;
+}
+
+.sideBar .modal-settings .settings-line:last-child {
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
 .sideBar .modal-settings .settings-line span {
