--- a/src/components/Chat/chat.css
+++ b/src/components/Chat/chat.css
@@ -4,6 +4,20 @@
     flex-direction: column;
     width: 100%;
     height: 100%;
+    transform : translateX(0);
+    transition: transform 0.3s ease-out;
+}
+
+.chat-fullscreen {
+    min-width: 100vw;
+    height: 100vh;
+    margin-left: 0;
+    transform : translateX(-243px);
+    transition: transform 0.3s ease-out;
+}
+
+.chat-container {
+    margin: 0 100px;
 }
 
 .chat .tools {
@@ -59,4 +73,72 @@
 .chat .tools button span {
     color: var(--main-color);
     font-weight: 200;
+}
+
+.chat .chat-container .logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.chat .chat-container .logo img {
+    width: 300px;
+}
+
+.chat .chat-container .inputs {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.chat .chat-container .inputs .input-content {
+    position: relative;
+    margin-bottom: 30px;
+}
+
+.chat .chat-container .inputs .input-content textarea {
+    width: 600px;
+    height: 60px;
+    border-radius: 50px;
+    border: #342F2E 1px solid;
+    background: none;
+    outline: none;
+    resize: none;
+    color: white;
+    font-family: Inter, sans-serif;
+    font-weight: 400;
+    padding: 22px 55px 20px 15px;
+    overflow: hidden;
+}
+
+.chat .chat-container .inputs .input-content textarea::placeholder {
+    color: white;
+    font-family: Inter, sans-serif;
+    font-weight: 300;
+    font-size: 15px;
+}
+
+.chat .chat-container .inputs .input-content button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    background: #EA580C;
+    border: none;
+    color: white;
+    width: 40px;
+    height: 40px;
+    border-radius: 50px;
+    cursor: pointer;
+    right: 10px;
+    top: 10px;
+}
+
+.chat .chat-container .inputs p {
+    color: #92908F;
+    font-weight: 200;
+    font-size: 13px;
+    font-style: italic;
 }
