--- a/src/components/Chat/chat.css
+++ b/src/components/Chat/chat.css
@@ -18,6 +18,11 @@
 
 .chat-container {
     margin: 0 100px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .chat .tools {
@@ -79,11 +84,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
 }
 
 .chat .chat-container .logo img {
-    width: 300px;
+    width: 250px;
 }
 
 .chat .chat-container .inputs {
@@ -96,21 +101,26 @@
 .chat .chat-container .inputs .input-content {
     position: relative;
     margin-bottom: 30px;
+    border-radius: 30px;
+    border: #342F2E 1px solid;
+    padding: 10px 0;
 }
 
 .chat .chat-container .inputs .input-content textarea {
-    width: 600px;
+    width: 700px;
     height: 60px;
-    border-radius: 50px;
-    border: #342F2E 1px solid;
-    background: none;
+    background: #171311;
+    border: none;
+    border-radius: 30px;
     outline: none;
     resize: none;
     color: white;
     font-family: Inter, sans-serif;
     font-weight: 400;
-    padding: 22px 55px 20px 15px;
-    overflow: hidden;
+    padding: 12px 55px 10px 20px;
+    overflow-y: none;
+    max-height: 300px;
+    box-sizing: border-box;
 }
 
 .chat .chat-container .inputs .input-content textarea::placeholder {
