--- a/src/components/Modal/modal.css
+++ b/src/components/Modal/modal.css
@@ -15,8 +15,6 @@
 
 .modal .modal-content {
     z-index: 5;
-    width: 500px;
-    height: 200px;
     background: #171311;
     border-radius: 20px;
     border: #342F2E 1px solid;
@@ -24,6 +22,11 @@
     flex-direction: column;
     align-items: center;
     position: relative;
+}
+
+.modal .modal-content.small {
+    width: 500px;
+    height: 200px;
 }
 
 .modal .modal-content.animate__animated {
@@ -101,4 +104,65 @@
 .modal .modal-content .content .option span {
     position: absolute;
     right: 20px;
+}
+
+.modal .modal-content .content-deleted {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin-bottom: 20px;
+    overflow: auto;
+}
+
+.modal .modal-content .content-deleted .option-deleted {
+    display: flex;
+    align-items: center;
+    padding: 15px;
+}
+
+.modal .modal-content .content-deleted .option-deleted a {
+    display: block;
+    text-decoration: none;
+    color: white;
+    font-weight: 500;
+    padding: 5px 0;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-size: 13px;
+    margin-right: 5px;
+}
+
+.modal .modal-content .content-deleted .option-deleted a:hover {
+    color: #92908F;
+    transition: ease all 0.3s;
+}
+
+.modal .modal-content .content-deleted .option-deleted button  {
+    color: white;
+    background: none;
+    border: none;
+    cursor: pointer;
+    width: 22px;
+    height: 22px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 20px;
+    padding: 12px;
+    margin-right: 5px;
+    transition: ease all 0.3s;
+}
+
+.modal .modal-content .content-deleted .option-deleted button:hover {
+    background: #92908F;
+    transition: ease all 0.3s;
+}
+
+.modal .modal-content .content-deleted .option-deleted button:last-child {
+    margin-right: 0;
+}
+
+.modal .modal-content .content-deleted .option-deleted button span  {
+    font-weight: 300;
 }
