--- a/src/components/Modal/modal.css
+++ b/src/components/Modal/modal.css
@@ -29,6 +29,16 @@
     height: 200px;
 }
 
+.modal .modal-content.medium {
+    width: 500px;
+    height: 300px;
+}
+
+.modal .modal-content.large {
+    width: 600px;
+    height: 600px;
+}
+
 .modal .modal-content.animate__animated {
     animation-duration: 500ms;
 }
@@ -51,7 +61,7 @@
     justify-content: center;
     align-items: center;
     position: absolute;
-    top: 10px;
+    top: 14px;
     right: 10px;
     background: var(--background);
     border: none;
@@ -165,4 +175,26 @@
 
 .modal .modal-content .content-deleted .option-deleted button span  {
     font-weight: 300;
+}
+
+.modal .modal-content.large .modal-header {
+    margin-bottom: 10px;
+}
+.modal .modal-content .content-profile {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    padding: 0 100px;
+}
+
+.modal .modal-content .content-profile .input-line {
+    display: flex;
+}
+.modal .modal-content .content-profile .input-line .input {
+    margin-right: 10px;
+}
+
+.modal .modal-content .content-profile .input-line .input:last-child {
+    margin-right: 0;
 }
