--- a/src/components/Button/buttons.css
+++ b/src/components/Button/buttons.css
@@ -11,4 +11,15 @@
     margin-top: 30px;
     font-size: 20px;
     font-weight: 600;
+    transition: transform 0.3s ease;
+}
+
+button {
+    transition: transform 0.3s ease;
+}
+
+button:active {
+    transform: scale(0.95);
+    transition: transform 0.3s ease;
+
 }
