--- a/frontend/src/components/App/SideBar/History/history.css
+++ b/frontend/src/components/App/SideBar/History/history.css
@@ -24,8 +24,7 @@
     margin-bottom: 10px;
 }
 
-.history .time .text .new-text {
-
+.history .time .new-chat a {
 }
 
 .history .time .text:hover button{
