--- a/frontend/src/components/App/SideBar/History/history.css
+++ b/frontend/src/components/App/SideBar/History/history.css
@@ -46,6 +46,7 @@
     text-overflow: ellipsis;
     font-size: 13px;
     min-width: 90%;
+    animation: animateText 0.5s ease forwards;
 }
 
 .history .time .text a:last-child {
@@ -72,4 +73,10 @@
     font-weight: 200;
     font-size: 22px;
 }
+
+@keyframes animateText {
+    0% { opacity: 0; transform: translateX(-20px); }
+    100% { opacity: 1; transform: translateX(0); }
+}
+
 
