--- a/frontend/src/components/App/Home/NewChat/newchat.css
+++ b/frontend/src/components/App/Home/NewChat/newchat.css
@@ -5,6 +5,7 @@
     width: 100%;
     height: 100%;
     transition: transform 0.3s ease-out;
+    overflow-y: auto;
 }
 
 .home {
@@ -23,19 +24,23 @@
 }
 
 .chat-container {
-    margin: 0 200px;
     height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 20px 200px 0;
 }
 
 .chat .tools {
     display: flex;
     align-items: center;
-    height: 70px;
+    min-height: 70px;
     padding: 10px;
     margin-left: 20px;
+    z-index: 1;
+    background: var(--background);
+    position: sticky;
+    top: 0;
 }
 
 .chat .tools .disabled {
