--- a/frontend/src/components/App/Modal/modal.css
+++ b/frontend/src/components/App/Modal/modal.css
@@ -128,8 +128,14 @@
     display: flex;
     align-items: center;
     padding: 15px;
+    position: relative;
 }
 
+.modal .modal-content .content-deleted .option-deleted .buttons-deleted {
+    display: flex;
+    position: absolute;
+    right: 10px;
+}
 .modal .modal-content .content-deleted .option-deleted a {
     display: block;
     text-decoration: none;
@@ -141,7 +147,7 @@
     text-overflow: ellipsis;
     font-size: 13px;
     margin-right: 5px;
-    min-width: 85%;
+    width: 88%;
 }
 
 .modal .modal-content .content-deleted .option-deleted a:hover {
@@ -249,11 +255,16 @@
     .modal .modal-content .content-profile button {
         margin-bottom: 15px;
     }
+
     .modal .modal-content .modal-header h2 {
         font-size: 20px;
     }
 
     .modal .modal-content .modal-header button {
         top: 8px;
+    }
+
+    .modal .modal-content .content-deleted .option-deleted a {
+        width: 80%;
     }
 }
