fix loading chat

--- a/frontend/src/components/App/Home/NewChat/newchat.css
+++ b/frontend/src/components/App/Home/NewChat/newchat.css
@@ -123,6 +123,9 @@
     cursor: pointer;
 }
 
+.chat .mode-choice .disabled {
+    opacity: .5;
+}
 .chat .mode-choice span {
     width: 50%;
     font-weight: 200;
